--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
       <p>Detailed description of Service 1.</p>
     </div>
     <div class="service-item">
-      <h3>Property</h3>
+      <h3>Property & Renting</h3>
       <p>Detailed description of Service 2.</p>
     </div>
     <div class="service-item">
