--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
   </section>
 
   <section class="services">
-    <h2>Our Services</h2>
+    <h2>It Consultancy</h2>
     <div class="service-item">
       <img src="images/service1.jpg" alt="Service 1">
-      <h3>Service 1</h3>
-      <p>Description of Service 1.</p>
+      <h3></h3>
+      <p>Description of Service .</p>
     </div>
     <div class="service-item">
       <img src="images/service2.jpg" alt="Service 2">
-      <h3>Service 2</h3>
+      <h3>Property & Renting</h3>
       <p>Description of Service 2.</p>
     </div>
     <div class="service-item">
       <img src="images/service3.jpg" alt="Service 3">
-      <h3>Service 3</h3>
+      <h3>Company Profile</h3>
       <p>Description of Service 3.</p>
     </div>
   </section>
