--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </section>
 
   <section class="services">
-    <h2>It Consultancy</h2>
+    <h2>IT Consultancy</h2>
     <div class="service-item">
       <img src="images/service1.jpg" alt="Service 1">
       <h3></h3>
