--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="service-item">
       <img src="images/service3.jpg" alt="Service 3">
-      <h3>Company Profile</h3>
+      <h3>Company Profile & invest</h3>
       <p>Description of Service 3.</p>
     </div>
   </section>
